syntax = "proto3";

option csharp_namespace = "user_service";

package user;

// The user service definition.
service UserService {
  rpc GetUser (US_Request) returns (US_Response);
  rpc RegisterUser (RegisterUser_Request) returns (RegisterUser_Response);
  rpc GetAllUsers (Empty_Request) returns (GetAllUsers_Response);
}

enum UserRole {
    Host = 0;
    Guest = 1;
};

message Empty_Request {

}

message US_Request {
  string name = 1;
}

message US_Response {
  string message = 1;
}

message RegisterUser_Request {
  UserRole Role = 1;
  string Username = 2;
  string Password = 3;
  string FirstName = 4;
  string LastName = 5;
  string Email = 6;
  string LivingPlace = 7;
}

message RegisterUser_Response {
  bool Success = 1;
  string Message = 2;
  
  message Error {
    string PropertyName = 1; 
    string ErrorMessage = 2;
  }

  repeated Error errors = 3;
}

message GetAllUsers_Response {
  message User {
    UserRole Role = 1;
    string Username = 2;
    string FirstName = 3;
    string LastName = 4;
    string Email = 5;
    string LivingPlace = 6;
  }
  repeated User users = 1;
}